# osk

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE  README.md  RELEASE-NOTES-1.1.0.md  RELEASE-NOTES-1.2.0.md  SAFETY.md  SECURITY.md  compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  design_feedback.md
.github/workflows/: browser-matrix.yml  chromebook-lab-gate.yml  chromebook-real-hub-gate.yml  ci.yml
docs/: 2026-03-28-option-b-final-summary.md  2026-03-28-validation-setup-complete.md  AAR_GUIDE.md  INSTALL_GUIDE.md  PROVENANCE.md  SECURITY.md  SUPPORTED_PROFILES.md  WORKFLOW.md  validation-setup-summary.md
docs/device/: BATTERY_USAGE_GUIDE.md  SUPPORTED_PROFILES.md
docs/operations/: AFTER_ACTION_REVIEW.md
docs/ops/: quickstart-card.md  real-device-quickstart.md  stability-test-procedure.md  validation-quickstart.md
docs/plans/: 2026-03-21-plan-1-core-hub-connection.md  2026-03-21-plan-2-intelligence-pipeline.md  2026-03-21-plan-3-synthesis-layer.md  2026-03-21-plan-4-coordinator-dashboard.md  2026-03-21-plan-5-mobile-pwa.md  2026-03-21-plan-6-operations-tooling.md  2026-03-22-plan-7-chromebook-lab-smoke.md  2026-03-23-plan-8-real-hub-validation.md  2026-03-25-plan-10-historical-drift-review-capture.md  2026-03-25-plan-11-review-aware-closure-parity.md  2026-03-25-plan-12-historical-review-history-parity.md  2026-03-25-plan-13-closure-trail-artifact-capture.md  2026-03-25-plan-14-shell-live-wipe-follow-up-trail-parity.md  2026-03-25-plan-15-machine-readable-members-parity.md  (+25 more)
scripts/: browser_sensor_lab.sh  browser_sensor_validation.py  chromebook_lab_control.sh  chromebook_lab_gate.sh  chromebook_member_shell_smoke.py  chromebook_member_shell_smoke.sh  chromebook_real_hub_gate.sh  chromebook_real_hub_report.sh  chromebook_real_hub_validation.sh  chromebook_real_hub_workflow_summary.py  chromebook_reverse_tunnel.sh  chromebook_sensor_validation.md  combined_validation.py  evaluate_semantic_synthesis.py  member_shell_playwright_smoke.sh  member_shell_smoke.py  ollama_synthesis_test.py  podman_android_lab.sh  real_device_test.sh  real_hub_validation.py  sensor_validation.py  simulate_sensor.py  stability_test.py  validate_1_2_0.py  validate_1_3_0.py
tests/: conftest.py  test_audio_ingest.py  test_chromebook_lab_contract.py  test_chromebook_lab_control.py  test_chromebook_lab_gate.py  test_chromebook_member_shell_wrapper.py  test_chromebook_real_hub_gate.py  test_chromebook_real_hub_report.py  test_chromebook_real_hub_workflow_summary.py  test_chromebook_real_hub_wrapper.py  test_chromebook_reverse_tunnel.py  test_cli.py  test_config.py  test_connection_manager.py  test_coordinator_engine.py  test_db.py  test_drills.py  test_evidence.py  test_evidence_export.py  test_fake_intelligence.py  test_frame_ingest.py  test_hotspot.py  test_hub.py  test_install_readiness.py  test_intelligence_contracts.py  test_intelligence_pipeline.py  test_intelligence_service.py  test_local_operator.py  test_member_runtime_tasking.py  test_member_shell_smoke.py  test_models.py  test_ollama_synthesis.py  test_operation.py  test_qr.py  test_real_hub_validation_contract.py  test_scripted_coordinator_scenario.py  test_security_hardening.py  test_server.py  test_storage.py  test_synthesis.py  (+6 more)
(+114 files in other folders)
