[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "osk"
version = "0.1.0a0"
description = "Local-first situational awareness for civilian groups"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Justin Smith" }
]
dependencies = [
  "asyncpg>=0.29,<1",
  "cryptography>=42,<46",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3",
  "pypng>=0.20220715.0",
  "qrcode>=8,<9",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
intelligence = [
  "faster-whisper>=1,<2",
  "numpy>=1.26,<3",
]
dev = [
  "numpy>=1.26,<3",
  "playwright>=1,<2",
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.12,<1",
]

[project.scripts]
osk = "osk.cli:main"

[project.urls]
Repository = "https://github.com/justinredmondsmith-collab/osk"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
osk = ["static/*.css", "static/*.js", "static/*.svg", "static/*.webmanifest", "templates/*.html"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
